--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- header started -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -33,8 +34,22 @@
             <img src="images/banner.png" alt="banner-pic">
         </div>
     </header>
+    <!-- header ended -->
     <main>
-
+        <!-- teams section started -->
+        <section class="teams-container">
+            <div class="teams-images">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="teams-content">
+                    <h3 class="teams-content-title"><span class="extra-color-grey">Quick list</span> <span class="extra-color-black">of Our</span> <span class="extra-color-orange">Features</span></h3>
+                    <p class="teams-content-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
