--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New<br>Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or random words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -45,9 +45,12 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-content">
-                    <h3 class="teams-content-title"><span class="extra-color-grey">Quick list</span> <span class="extra-color-black">of Our</span> <span class="extra-color-orange">Features</span></h3>
-                    <p class="teams-content-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
-                    <button class="btn-primary">Explore More</button>
+                <h3 class="teams-content-title"><span class="extra-color-grey">Quick list</span> <span
+                        class="extra-color-black">of Our</span> <span class="extra-color-orange">Features</span></h3>
+                <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or random words which don't look
+                    even</p>
+                <button class="btn-primary">Explore More</button>
             </div>
         </section>
     </main>
