--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header started -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -51,6 +51,37 @@
                     majority have suffered alteration in some form, by injected humour, or random words which don't look
                     even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features section -->
+        <section class="features">
+
+        </section>
+        <!-- facts section -->
+        <section class="facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title text-color-grey">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title text-color-grey">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title text-color-grey">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title text-color-grey">Email Send</p>
+                </div>
             </div>
         </section>
     </main>
