--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
                 </div>
             </div>
         </section>
+        <!-- sponsor section -->
+        <section class="sponsors">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsor-images">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
