--- a/index.html
+++ b/index.html
@@ -55,7 +55,33 @@
         </section>
         <!-- features section -->
         <section class="features">
-
+            <div class="feature-contents">
+                <h3 class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                <div class="card">
+                    <h4>Desktop & Mobile Version</h4>
+                    <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                </div>
+                <div class="card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                </div>
+                <div class="card">
+                    <h4>Awesome Modern Design</h4>
+                    <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                </div>
+                <div class="card">
+                    <h4>Super Easy to Edit</h4>
+                    <p class="text-color-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even</p>
+                </div>
+            </div>
+            <div class="feature-images">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h2>10+ Year</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
         <!-- facts section -->
         <section class="facts">
@@ -98,7 +124,7 @@
         </section>
     </main>
     <footer>
-
+        <h4>All rights reserved copyright@2023 startup landing page design</h4>
     </footer>
 </body>
 
